# ads_mle_simulation

./: .gitignore  API_usage_instructions  BUCK  L1 quesions.md  bento_complexity_heatmap.py  model_performance_api.py  pyproject.toml  simple_interpolation.py
code/: Simulation API instructions.ipynb  api debug.ipynb  model_performance_api.py
notebooks/: SIM model _ manual eval -shareout - 60days - 10 tries -temp.ipynb  SIM model _ manual eval -shareout - 60days - 10 tries -weiqiu.ipynb  Simulation API instructions.ipynb  api debug - new arch format.ipynb  api debug.ipynb  baselines.ipynb  v2 SIM model _ manual eval - metamate 10 guesses.ipynb
scripts/: README.md  run_experiments.py
src/: bento_complexity_heatmap.py  model_performance_api.py  simple_interpolation.py
src/archopt/: README.md  benchmark.py  config.py  evaluation.py  logging_utils.py  modifiers.py  networks.py  suggestors.py
src/simenv/: bento_complexity_heatmap.py  model_performance_api.py  simple_interpolation.py
tasks/10 tries @60days no noise/: L3 task description.txt  Sim ML Bench_l3_60days_10tries.csv  Sim_ML_Bench_l3_60days_10tries_baselines__hardQPS_Q3500.csv  baselines_insights.md  modifiers.csv  results.txt  results_baselines.txt  results_baselines__hardQPS_Q3500.txt  results_details_baselines.txt  results_details_baselines__hardQPS_Q3500.txt
v2 model files/: V2 simulation result parsing-skewed competition.ipynb  flattened_all.csv  flattened_all_evo.csv  random_v2_20.csv
v2 model files/simulation/: BUCK  __init__.py  bento_complexity_heatmap.py  complexity_formulas.md  model_performance_api.py  (+3 more)
(+66 files in other folders)
