[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ads-mle-simulation"
version = "0.1.0"
description = "HPO on a simulated environment"
requires-python = ">=3.10"
# Base deps (keep small so editable install is fast)
dependencies = [
  "numpy>=1.24",
  "pandas>=1.5",
  "matplotlib>=3.7",
]

# Put heavy/optional HPO libs here
[project.optional-dependencies]
hpo = [
  "optuna>=3.2",
  "scikit-optimize==0.9.0",
  "nevergrad>=0.12.1",
]
dev = [
  "ipykernel",
  "black",
  "ruff",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["archopt*", "simenv*"]
exclude = ["tests*"]
